[package]
name = "webimint"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.142", features = [ "derive" ] }
serde_json = "1.0.79"
tracing = "0.1.26"
lazy_static = "1.4.0"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
base64 = "0.13.0"
bincode = "1.3.1"

# wasm dependencies
wasm-bindgen = "0.2.83"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.32"
rexie = "0.4.2"
js-sys = "0.3.59"

# fedimint dependencies
mint-client = { git = "https://github.com/fedimint/fedimint", rev = "884206f" }
fedimint-api = { git = "https://github.com/fedimint/fedimint", rev = "884206f" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", rev = "884206f" }
# mint-client = { path = "../../fedimint/client/client-lib/"}
# fedimint-api = { path = "../../fedimint/fedimint-api/" }
# fedimint-core = { path = "../../fedimint/fedimint-core/" }

[patch.crates-io]
bitcoin_hashes = { version = "0.10.0", git = 'https://github.com/fedimint/bitcoin_hashes', branch = 'minimint' }
secp256k1-zkp = { git = "https://github.com/fedimint/rust-secp256k1-zkp/", branch = "sanket-pr" }
